# BurgerSpace

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  bootstrap  burgerspace.spec  burgerspace.spec.in  configure  configure.ac
debian/: burgerspace.xpm  changelog  control  copyright  dirs  menu  rules  watch
debian/patches/: fix_menu_categories.patch  manpage_fixes.patch  series
doc/: burgerspace-server.6  burgerspace-server.6.in  burgerspace.6  burgerspace.6.in
src/: BurgerSpaceClient.cpp  BurgerSpaceClient.h  BurgerSpaceEngine.cpp  BurgerSpaceEngine.h  BurgerSpaceServer.cpp  BurgerSpaceServer.h  ChefController.h  Controller.h  EnemySprite.cpp  EnemySprite.h  Helpers.h  IngredientGroup.cpp  IngredientGroup.h  IngredientSprite.h  Level.cpp  Level.h  LevelSet.cpp  LevelSet.h  LocalServer.cpp  LocalServer.h  Makefile.am  Makefile.in  ParsedLevelSet.cpp  ParsedLevelSet.h  RemoteServer.cpp  RemoteServer.h  burgerspace.desktop  burgerspace.desktop.in  client.cpp  levelset.yaml  pixmaps.h  sdlmain.cpp  server.cpp  testlevels.yaml  util.h
src/images/: bottom-bun.xpm  bottom-bun0.xpm  bottom-bun1.xpm  bottom-bun2.xpm  bottom-bun3.xpm  chef-back0.xpm  chef-back1.xpm  chef-back2.xpm  chef-dead0.xpm  chef-dead1.xpm  chef-dead2.xpm  chef-dead3.xpm  chef-dead4.xpm  chef-dead5.xpm  chef-front0.xpm  chef-front1.xpm  chef-front2.xpm  chef-left0.xpm  chef-left1.xpm  chef-left2.xpm  chef-right0.xpm  chef-right1.xpm  chef-right2.xpm  coffee.xpm  digit0.xpm  digit1.xpm  digit2.xpm  digit3.xpm  digit4.xpm  digit5.xpm  digit6.xpm  digit7.xpm  digit8.xpm  digit9.xpm  egg-back0.xpm  egg-back1.xpm  egg-dead0.xpm  egg-dead1.xpm  egg-dead2.xpm  egg-dead3.xpm  (+70 more)
